--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,10 @@
     border: 2px solid #4caf50;
 }
 
+.pokemon-list{
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+
+}
