--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 24px;
     margin: 4px 2px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -15,7 +15,10 @@
     color: black;
     border: 2px solid #4caf50;
 }
-
+.btn {
+  background-color: #0072ee;
+  color: #ffffff;
+}
 .pokemon-list{
 
   display: grid;
